--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
-		<title>jiayueliuxue</title>
+		<title>tosengi - upcoming ecommerce marketplace</title>
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
 		
 		<!-- Custom styles for this template -->
-		<link href="jumbotron-narrow.css" rel="stylesheet">
+		<link href="css/jumbotron-narrow.css" rel="stylesheet">
 
 		<!-- Just for debugging purposes. Don't actually copy this line! -->
 		<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
